@@ -306,15 +306,11 @@ void CGUIBaseObject::Update()
 
 void CGUIBaseObject::GetAbsolutPosition(int* x, int* y)
 {
-	EnterRenderLock();
-
 	if (m_pParent != NULL)
 		m_pParent->GetAbsolutPosition(x, y);
 
 	*x += m_iX;
 	*y += m_iY;
-
-	LeaveRenderLock();
 }
 
 ////////////////////////////////////////////////////////////////////////////////////////////////////
